--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   <footer class="w3-row-padding w3-padding-32">
     <div class="w3-third">
       <h3> Info </h3>
-      <p> Website designed by Ella Pullin, Laura Tokarska and Ezgi Kılınç </p>
+      <p> Website designed by Ella Pullin, Laura Tokarska and Ezgi Kilinc </p>
       <p> Created with the help of <a href= "https://www.codefirstgirls.org.uk/"> Coding First: Girls </a> and <a href= "https://www.w3schools.com/"> W3 Schools </a> </p>
 
     </div>
