--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- First Photo Grid-->
   <!--Brew Lab-->
-  <div class="w3-row-padding w3-padding-16 w3-center" id="main-cafes">
+  <div class="w3-row-padding w3-padding-16 w3-center">
     <div class="w3-quarter">
       <img src="./images/brewlab.jpg" alt="Brew Lab" style="width:100%">
     <h3> <a href="https://www.brewlabcoffee.co.uk/"> Brew Lab </a> </h3>
@@ -117,7 +117,8 @@
 
     <!-- Second Photo Grid-->
     <!--Thomas J. Walls-->
-    <div class="w3-row-padding w3-padding-16 w3-center" id="food">
+
+    <div class="w3-row-padding w3-padding-16 w3-center">
       <div class="w3-quarter">
         <img src="./images/thomasjwalls.jpg" alt="ThomasJ.Walls" style="width:100%">
         <h3> <a href="https://www.facebook.com/pages/Thomas-J-Walls/147270558642913"> Thomas J. Walls </a> </h3>
@@ -204,7 +205,7 @@
 
 
   <!-- Footer -->
-  <footer class="w3-row-padding w3-padding-32">
+  <footer class="footer">
     <div class="w3-third">
       <h3> Info </h3>
       <p> Website designed by Ella Pullin, Laura Tokarska and Ezgi Kılınç </p>
